{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 199,
  "lineage": "211df01e-8a35-5465-56e0-dccddecc3979",
  "resources": [
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "apache-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "availability_zone": "No-Zone",
                "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer/frontendIPConfigurations/PublicIPAddress",
                "inbound_nat_rules": [
                  "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer/inboundNatRules/HttpAccess"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer",
            "location": "eastus",
            "name": "ApacheLoadBalancer",
            "resource_group_name": "Project-RG2",
            "sku": "Basic"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_public_ip.lb-ip",
            "module.CoalfireModule.azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend-pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkInterfaces/vm3-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer",
            "name": "BackEndAddressPool",
            "resource_group_name": "Project-RG2"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_lb.apache-lb",
            "module.CoalfireModule.azurerm_public_ip.lb-ip"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "lb-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 80,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer/inboundNatRules/HttpAccess",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer",
            "name": "HttpAccess",
            "protocol": "Tcp",
            "resource_group_name": "Project-RG2"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_public_ip.lb-ip",
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_lb.apache-lb"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkInterfaces/vm1-nic",
            "internal_domain_name_suffix": "04zzvmjce4me1h3jnpmazk4mvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-24-4B-0B",
            "name": "vm1-nic",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "Project-RG2",
            "virtual_machine_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Compute/virtualMachines/VM-1"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_subnet.sub1",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interface2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkInterfaces/vm2-nic",
            "internal_domain_name_suffix": "04zzvmjce4me1h3jnpmazk4mvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub1"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-1D-59-23",
            "name": "vm2-nic",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "Project-RG2",
            "virtual_machine_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Compute/virtualMachines/VM-2"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_subnet.sub1",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interface3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkInterfaces/vm3-nic",
            "internal_domain_name_suffix": "04zzvmjce4me1h3jnpmazk4mvd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub3"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-11-5D-78",
            "name": "vm3-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Project-RG2",
            "virtual_machine_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Compute/virtualMachines/Apache-VM"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_subnet.sub3",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer/backendAddressPools/BackEndAddressPool",
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkInterfaces/vm3-nic/ipConfigurations/internal|/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/loadBalancers/ApacheLoadBalancer/backendAddressPools/BackEndAddressPool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkInterfaces/vm3-nic"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_lb.apache-lb",
            "module.CoalfireModule.azurerm_lb_backend_address_pool.backend-pool",
            "module.CoalfireModule.azurerm_network_interface.interface3",
            "module.CoalfireModule.azurerm_public_ip.lb-ip",
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_subnet.sub3",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkSecurityGroups/project-nsg-1",
            "location": "eastus",
            "name": "project-nsg-1",
            "resource_group_name": "Project-RG2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-ssh",
                "priority": 1001,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkSecurityGroups/project-nsg-2",
            "location": "eastus",
            "name": "project-nsg-2",
            "resource_group_name": "Project-RG2",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "allow-lb",
                "priority": 1001,
                "protocol": "*",
                "source_address_prefix": "40.76.70.194",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "lb-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.76.70.194",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "PublicIPForLB",
            "resource_group_name": "Project-RG2",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub1",
            "name": "sub1",
            "resource_group_name": "Project-RG2",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "virtualNetwork1"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub2",
            "name": "sub2",
            "resource_group_name": "Project-RG2",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "virtualNetwork1"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub3",
            "name": "sub3",
            "resource_group_name": "Project-RG2",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "virtualNetwork1"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "sub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub4",
            "name": "sub4",
            "resource_group_name": "Project-RG2",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "virtualNetwork1"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sub1-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub1",
            "network_security_group_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkSecurityGroups/project-nsg-1",
            "subnet_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub1"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_network_security_group.nsg1",
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_subnet.sub1",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "sub3-associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub3",
            "network_security_group_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkSecurityGroups/project-nsg-2",
            "subnet_id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub3"
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_network_security_group.nsg2",
            "module.CoalfireModule.azurerm_resource_group.project-rg",
            "module.CoalfireModule.azurerm_subnet.sub3",
            "module.CoalfireModule.azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "module": "module.CoalfireModule",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "b19ab3d7-2722-4d98-9fa9-6bd80cabccab",
            "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1",
            "location": "eastus",
            "name": "virtualNetwork1",
            "resource_group_name": "Project-RG2",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub1",
                "name": "sub1",
                "security_group": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkSecurityGroups/project-nsg-1"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub2",
                "name": "sub2"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub3",
                "name": "sub3",
                "security_group": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/networkSecurityGroups/project-nsg-2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/sub4",
                "name": "sub4"
              },
              {
                "address_prefix": "10.0.4.0/27",
                "id": "/subscriptions/c0a57d55-42cb-4d4d-ab13-62d30c7b4b31/resourceGroups/Project-RG2/providers/Microsoft.Network/virtualNetworks/virtualNetwork1/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.CoalfireModule.azurerm_resource_group.project-rg"
          ]
        }
      ]
    }
  ]
}